<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/homePageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/appTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeRecyclerView"
        android:layout_width="413dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonChain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homePageTitle"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/HomeSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:text="@string/upcomingEventsLabel"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/buttonChain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/calendarButton"
            android:layout_width="43dp"
            android:layout_height="36dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toStartOf="@+id/storageButton"
            app:srcCompat="@drawable/ic_calendar" />

        <ImageView
            android:id="@+id/storageButton"
            android:layout_width="43dp"
            android:layout_height="36dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toStartOf="@+id/homeButton"
            app:layout_constraintStart_toEndOf="@+id/calendarButton"
            app:srcCompat="@drawable/ic_storage" />

        <ImageView
            android:id="@+id/homeButton"
            android:layout_width="43dp"
            android:layout_height="36dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toStartOf="@+id/pomodoroButton"
            app:layout_constraintStart_toEndOf="@+id/storageButton"
            app:srcCompat="@drawable/ic_home" />

        <ImageView
            android:id="@+id/pomodoroButton"
            android:layout_width="43dp"
            android:layout_height="36dp"
            android:layout_marginStart="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/homeButton"
            app:srcCompat="@drawable/ic_timer" />

    </LinearLayout>

    <Button
        android:id="@+id/addEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/addEventButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toEndOf="@+id/HomeSubtitle"
        app:layout_constraintTop_toBottomOf="@+id/homePageTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>
